Added config option to disable rotating practice locations on left click with practice tool

--- a/src/config.yml
+++ b/src/config.yml
@@ -43,3 +43,4 @@ practice:
     destroyBlocksWhileHoldingPracticeTool: false
     destroyActivatorBlocksWithoutPkTool: false
     displayTimer: true
+    cycleOnLeftClick: true
