Added functionality to teleport player back to current practice location upon falling in the void

--- a/src/config.yml
+++ b/src/config.yml
@@ -44,3 +44,4 @@ practice:
     destroyActivatorBlocksWithoutPkTool: false
     displayTimer: true
     cycleOnLeftClick: true
+    teleportWhenInVoid: true
