Fixed unwanted destruction of activator blocks

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -44,3 +44,6 @@ practice:
     destroyActivatorBlocksWithoutPkTool: false
     teleportWhenInVoid: true
     displayTimer: true
+    destroyActivatorsOnExplode: false
+    destroyActivatorsOnPhysics: false
+    destroyActivatorsOnPistonExtend: false
